--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "rails-app-schedule",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.4",
+    "@rails/webpacker": "5.4.0",
+    "bootstrap": "^5.3.2",
+    "data-confirm-modal": "^1.6.2",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^4.15.1"
   }
 }
